Bug 755533 - Ensure we fire canplaythrough if the media's channel is suspended before metadata is loaded. r=roc